Fix some layout issues

--- a/src/main/wc/layout.less
+++ b/src/main/wc/layout.less
@@ -18,8 +18,8 @@ body {
 
 		> header {
 			width: 100%;
-			height: 50px;
 			display: flex;
+			flex: 0 0 50px;
 			color: var(--main1);
 			align-items: center;
 			background-color: var(--base2);
@@ -75,9 +75,9 @@ body {
 
 		> footer {
 			bottom: 0;
-			height: 28px;
 			padding: 8px;
 			display: flex;
+			flex: 0 0 28px;
 			font-size: 12px;
 			font-weight: bold;
 			color: var(--base1);
